# pengakollen

./: README.md  pyproject.toml  se.danielnylander.pengakollen.desktop
.tx/: config
po/: pengakollen.pot  sv.mo  sv.po
src/pengakollen/: main.py
